unpackaged/main/default/objects/Epr_History_log__c/Epr_History_log__c.object-meta.xml
<CustomObject>
    <label>Epr History log</label>
    <nameField>
        <label>Epr History log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Epr History logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>