unpackaged/main/default/objects/Epr_History_log__c/fields/isExecuted__c.field-meta.xml
<CustomField>
    <fullName>isExecuted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Determines Batch class has been Executed for selected History Item</inlineHelpText>
    <label>isExecuted</label>
    <type>Checkbox</type>
</CustomField>